<resources>
    <string name="app_name">Traveler</string>
    <string name="shareBar">Share Your Friends</string>
    <string-array name="travelLocation">
        <item>bangkok</item>
        <item>tokyo</item>
        <item>newyork</item>
        <item>londan</item>
        <item>singapore</item>
    </string-array>
    <string-array name="travelArriveDate">
        <item>2013.05.28</item>
        <item>2013.07.01</item>
        <item>2016.08.15</item>
        <item>2016.12.11</item>
        <item>2017.07.12</item>
    </string-array>
    <string-array name="travelLeaveDate">
        <item>2013.06.10</item>
        <item>2013.07.13</item>
        <item>2016.08.25</item>
        <item>2016.12.14</item>
        <item>2017.07.19</item>
    </string-array>
    <string-array name="Category">
        <item>Food</item>
        <item>Scenery</item>
    </string-array>
    <string name="add">Add </string>
    <string name="createSchedule">New Schedule</string>
    <string name="addDialogName">Location</string>
    <string name="addDialogDistrict">District</string>
    <string name="addDialogCategory">Category</string>
    <string name="addDialogDescription">Description</string>
    <string name="Cancel">Cancel</string>
</resources>
