<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/createSchedule"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.ActionBar.Title"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/addDialogName"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/locationInput"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="Type The Location"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/addDialogCategory"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:entries="@array/Category"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/addDialogDistrict"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/districtInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="Type The Category"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/addDialogDescription"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="Write Some Description"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">


            <Button
                android:id="@+id/cancelDialogBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cancel"
                android:textColor="@android:color/background_light"
                android:theme="@style/Base.Widget.AppCompat.Button" />

            <Button
                android:id="@+id/addDialogBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textColor="@android:color/background_light"
                android:theme="@style/Base.Widget.AppCompat.Button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>